--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   expansion_tile_card: ^2.0.0
   expandable: ^5.0.1
   font_awesome_flutter: ^9.0.0
+  image_picker: ^0.8.0+3
+
 
 flutter_icons:
   android: true
