--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   expandable: ^5.0.1
   font_awesome_flutter: ^9.0.0
   image_picker: ^0.8.0+3
+  flutter_bloc: ^7.0.1
 
 
 flutter_icons:
